--- a/main.html
+++ b/main.html
@@ -13,6 +13,12 @@
     	<div class="item item-3">3</div>
     	<div class="item item-4">4</div>
    </div>
+	<div class="holder">
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+  </div>
    <script type="text/javascript" src="./script.js">
 </script>
 
