--- a/main.html
+++ b/main.html
@@ -1,27 +1,44 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>2x2 CSS Grid</title>
+  <style>
+    .holder {
+      display: grid;
+      width: 200px;
+      height: 200px;
 
+      /* Use exact pixel sizes, not fractions */
+      grid-template-rows: repeat(2, 100px);
+      grid-template-columns: repeat(2, 100px);
+
+      /* Remove spacing & borders so Cypress sees 100px tracks */
+      gap: 0;
+      padding: 0;
+      border: none;
+      box-sizing: content-box;
+    }
+
+    .item {
+      background-color: lightblue;
+      border: 1px solid blue;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+    }
+  </style>
+</head>
 <body>
-    <div class="holder">
-    	<div class="item item-1">1</div>
-    	<div class="item item-2">2</div>
-    	<div class="item item-3">3</div>
-    	<div class="item item-4">4</div>
-   </div>
-	<div class="holder">
+
+  <div class="holder">
     <div class="item">1</div>
     <div class="item">2</div>
     <div class="item">3</div>
     <div class="item">4</div>
   </div>
-   <script type="text/javascript" src="./script.js">
-</script>
 
 </body>
-
 </html>
